virtualMachines/esp32/aggregator/grammar/generated-modern/StandardPascalParser.js
// Generated from C:/dev/pulse-new-repo/virtualMachines/esp32/aggregator/grammar/StandardPascal.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import StandardPascalVisitor from './StandardPascalVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class StandardPascalParser extends antlr4.Parser {

    static grammarFileName = "StandardPascal.g4";
    static literalNames = [ null, "'PROGRAM'", "'VAR'", "'PROCEDURE'", "'BEGIN'", 
                            "'END'", "'INTEGER'", "'IF'", "'THEN'", "'ELSE'", 
                            "'WRITELN'", "':='", "':'", "';'", "','", "'.'", 
                            "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'='", 
                            "'<>'", "'<'", "'<='", "'>'", "'>='" ];
    static symbolicNames = [ null, "PROGRAM", "VAR", "PROCEDURE", "BEGIN", 
                             "END", "INTEGER", "IF", "THEN", "ELSE", "WRITELN", 
                             "ASSIGN", "COLON", "SEMICOLON", "COMMA", "DOT", 
                             "LPAREN", "RPAREN", "PLUS", "MINUS", "MUL", 
                             "DIV", "EQ", "NEQ", "LT", "LE", "GT", "GE", 
                             "IDENT", "NUMBER", "STRING", "BRACE_COMMENT", 
                             "PAREN_COMMENT", "LINE_COMMENT", "WS" ];
    static ruleNames = [ "program", "block", "varSection", "varDecl", "identList", 
                         "procedureDecl", "paramList", "paramDecl", "compoundStmt", 
                         "statementList", "statement", "assignment", "procedureCall", 
                         "ifStmt", "writelnStmt", "writeArgList", "writeArg", 
                         "argList", "expr", "additiveExpr", "multiplicativeExpr", 
                         "unaryExpr", "primary" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = StandardPascalParser.ruleNames;
        this.literalNames = StandardPascalParser.literalNames;
        this.symbolicNames = StandardPascalParser.symbolicNames;
    }



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, StandardPascalParser.RULE_program);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 46;
	        this.match(StandardPascalParser.PROGRAM);
	        this.state = 47;
	        this.match(StandardPascalParser.IDENT);
	        this.state = 48;
	        this.match(StandardPascalParser.SEMICOLON);
	        this.state = 49;
	        this.block();
	        this.state = 50;
	        this.match(StandardPascalParser.DOT);
	        this.state = 51;
	        this.match(StandardPascalParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	block() {
	    let localctx = new BlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, StandardPascalParser.RULE_block);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 54;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2) {
	            this.state = 53;
	            this.varSection();
	        }

	        this.state = 59;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===3) {
	            this.state = 56;
	            this.procedureDecl();
	            this.state = 61;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 62;
	        this.compoundStmt();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	varSection() {
	    let localctx = new VarSectionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, StandardPascalParser.RULE_varSection);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 64;
	        this.match(StandardPascalParser.VAR);
	        this.state = 66; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 65;
	            this.varDecl();
	            this.state = 68; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===28);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	varDecl() {
	    let localctx = new VarDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, StandardPascalParser.RULE_varDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 70;
	        this.identList();
	        this.state = 71;
	        this.match(StandardPascalParser.COLON);
	        this.state = 72;
	        this.match(StandardPascalParser.INTEGER);
	        this.state = 73;
	        this.match(StandardPascalParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	identList() {
	    let localctx = new IdentListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, StandardPascalParser.RULE_identList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 75;
	        this.match(StandardPascalParser.IDENT);
	        this.state = 80;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===14) {
	            this.state = 76;
	            this.match(StandardPascalParser.COMMA);
	            this.state = 77;
	            this.match(StandardPascalParser.IDENT);
	            this.state = 82;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	procedureDecl() {
	    let localctx = new ProcedureDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, StandardPascalParser.RULE_procedureDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 83;
	        this.match(StandardPascalParser.PROCEDURE);
	        this.state = 84;
	        this.match(StandardPascalParser.IDENT);
	        this.state = 85;
	        this.match(StandardPascalParser.LPAREN);
	        this.state = 87;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===28) {
	            this.state = 86;
	            this.paramList();
	        }

	        this.state = 89;
	        this.match(StandardPascalParser.RPAREN);
	        this.state = 90;
	        this.match(StandardPascalParser.SEMICOLON);
	        this.state = 92;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2) {
	            this.state = 91;
	            this.varSection();
	        }

	        this.state = 94;
	        this.compoundStmt();
	        this.state = 95;
	        this.match(StandardPascalParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	paramList() {
	    let localctx = new ParamListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, StandardPascalParser.RULE_paramList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 97;
	        this.paramDecl();
	        this.state = 102;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===13) {
	            this.state = 98;
	            this.match(StandardPascalParser.SEMICOLON);
	            this.state = 99;
	            this.paramDecl();
	            this.state = 104;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	paramDecl() {
	    let localctx = new ParamDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, StandardPascalParser.RULE_paramDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        this.identList();
	        this.state = 106;
	        this.match(StandardPascalParser.COLON);
	        this.state = 107;
	        this.match(StandardPascalParser.INTEGER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	compoundStmt() {
	    let localctx = new CompoundStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, StandardPascalParser.RULE_compoundStmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 109;
	        this.match(StandardPascalParser.BEGIN);
	        this.state = 111;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 268436624) !== 0)) {
	            this.state = 110;
	            this.statementList();
	        }

	        this.state = 113;
	        this.match(StandardPascalParser.END);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statementList() {
	    let localctx = new StatementListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, StandardPascalParser.RULE_statementList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 115;
	        this.statement();
	        this.state = 120;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,8,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 116;
	                this.match(StandardPascalParser.SEMICOLON);
	                this.state = 117;
	                this.statement(); 
	            }
	            this.state = 122;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,8,this._ctx);
	        }

	        this.state = 124;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===13) {
	            this.state = 123;
	            this.match(StandardPascalParser.SEMICOLON);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, StandardPascalParser.RULE_statement);
	    try {
	        this.state = 131;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 126;
	            this.assignment();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 127;
	            this.procedureCall();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 128;
	            this.ifStmt();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 129;
	            this.writelnStmt();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 130;
	            this.compoundStmt();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignment() {
	    let localctx = new AssignmentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, StandardPascalParser.RULE_assignment);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 133;
	        this.match(StandardPascalParser.IDENT);
	        this.state = 134;
	        this.match(StandardPascalParser.ASSIGN);
	        this.state = 135;
	        this.expr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	procedureCall() {
	    let localctx = new ProcedureCallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, StandardPascalParser.RULE_procedureCall);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 137;
	        this.match(StandardPascalParser.IDENT);
	        this.state = 138;
	        this.match(StandardPascalParser.LPAREN);
	        this.state = 140;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 805896192) !== 0)) {
	            this.state = 139;
	            this.argList();
	        }

	        this.state = 142;
	        this.match(StandardPascalParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifStmt() {
	    let localctx = new IfStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, StandardPascalParser.RULE_ifStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 144;
	        this.match(StandardPascalParser.IF);
	        this.state = 145;
	        this.expr();
	        this.state = 146;
	        this.match(StandardPascalParser.THEN);
	        this.state = 147;
	        this.statement();
	        this.state = 150;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,12,this._ctx);
	        if(la_===1) {
	            this.state = 148;
	            this.match(StandardPascalParser.ELSE);
	            this.state = 149;
	            this.statement();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	writelnStmt() {
	    let localctx = new WritelnStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, StandardPascalParser.RULE_writelnStmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 152;
	        this.match(StandardPascalParser.WRITELN);
	        this.state = 153;
	        this.match(StandardPascalParser.LPAREN);
	        this.state = 155;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 1879638016) !== 0)) {
	            this.state = 154;
	            this.writeArgList();
	        }

	        this.state = 157;
	        this.match(StandardPascalParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	writeArgList() {
	    let localctx = new WriteArgListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, StandardPascalParser.RULE_writeArgList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 159;
	        this.writeArg();
	        this.state = 164;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===14) {
	            this.state = 160;
	            this.match(StandardPascalParser.COMMA);
	            this.state = 161;
	            this.writeArg();
	            this.state = 166;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	writeArg() {
	    let localctx = new WriteArgContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, StandardPascalParser.RULE_writeArg);
	    try {
	        this.state = 169;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 16:
	        case 19:
	        case 28:
	        case 29:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 167;
	            this.expr();
	            break;
	        case 30:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 168;
	            this.match(StandardPascalParser.STRING);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argList() {
	    let localctx = new ArgListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, StandardPascalParser.RULE_argList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 171;
	        this.expr();
	        this.state = 176;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===14) {
	            this.state = 172;
	            this.match(StandardPascalParser.COMMA);
	            this.state = 173;
	            this.expr();
	            this.state = 178;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expr() {
	    let localctx = new ExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, StandardPascalParser.RULE_expr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 179;
	        this.additiveExpr();
	        this.state = 182;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 264241152) !== 0)) {
	            this.state = 180;
	            _la = this._input.LA(1);
	            if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 264241152) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 181;
	            this.additiveExpr();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	additiveExpr() {
	    let localctx = new AdditiveExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, StandardPascalParser.RULE_additiveExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 184;
	        this.multiplicativeExpr();
	        this.state = 189;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===18 || _la===19) {
	            this.state = 185;
	            _la = this._input.LA(1);
	            if(!(_la===18 || _la===19)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 186;
	            this.multiplicativeExpr();
	            this.state = 191;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	multiplicativeExpr() {
	    let localctx = new MultiplicativeExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, StandardPascalParser.RULE_multiplicativeExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 192;
	        this.unaryExpr();
	        this.state = 197;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===20 || _la===21) {
	            this.state = 193;
	            _la = this._input.LA(1);
	            if(!(_la===20 || _la===21)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 194;
	            this.unaryExpr();
	            this.state = 199;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	unaryExpr() {
	    let localctx = new UnaryExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, StandardPascalParser.RULE_unaryExpr);
	    try {
	        this.state = 203;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 19:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 200;
	            this.match(StandardPascalParser.MINUS);
	            this.state = 201;
	            this.unaryExpr();
	            break;
	        case 16:
	        case 28:
	        case 29:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 202;
	            this.primary();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	primary() {
	    let localctx = new PrimaryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, StandardPascalParser.RULE_primary);
	    try {
	        this.state = 211;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 29:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 205;
	            this.match(StandardPascalParser.NUMBER);
	            break;
	        case 28:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 206;
	            this.match(StandardPascalParser.IDENT);
	            break;
	        case 16:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 207;
	            this.match(StandardPascalParser.LPAREN);
	            this.state = 208;
	            this.expr();
	            this.state = 209;
	            this.match(StandardPascalParser.RPAREN);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

StandardPascalParser.EOF = antlr4.Token.EOF;
StandardPascalParser.PROGRAM = 1;
StandardPascalParser.VAR = 2;
StandardPascalParser.PROCEDURE = 3;
StandardPascalParser.BEGIN = 4;
StandardPascalParser.END = 5;
StandardPascalParser.INTEGER = 6;
StandardPascalParser.IF = 7;
StandardPascalParser.THEN = 8;
StandardPascalParser.ELSE = 9;
StandardPascalParser.WRITELN = 10;
StandardPascalParser.ASSIGN = 11;
StandardPascalParser.COLON = 12;
StandardPascalParser.SEMICOLON = 13;
StandardPascalParser.COMMA = 14;
StandardPascalParser.DOT = 15;
StandardPascalParser.LPAREN = 16;
StandardPascalParser.RPAREN = 17;
StandardPascalParser.PLUS = 18;
StandardPascalParser.MINUS = 19;
StandardPascalParser.MUL = 20;
StandardPascalParser.DIV = 21;
StandardPascalParser.EQ = 22;
StandardPascalParser.NEQ = 23;
StandardPascalParser.LT = 24;
StandardPascalParser.LE = 25;
StandardPascalParser.GT = 26;
StandardPascalParser.GE = 27;
StandardPascalParser.IDENT = 28;
StandardPascalParser.NUMBER = 29;
StandardPascalParser.STRING = 30;
StandardPascalParser.BRACE_COMMENT = 31;
StandardPascalParser.PAREN_COMMENT = 32;
StandardPascalParser.LINE_COMMENT = 33;
StandardPascalParser.WS = 34;

StandardPascalParser.RULE_program = 0;
StandardPascalParser.RULE_block = 1;
StandardPascalParser.RULE_varSection = 2;
StandardPascalParser.RULE_varDecl = 3;
StandardPascalParser.RULE_identList = 4;
StandardPascalParser.RULE_procedureDecl = 5;
StandardPascalParser.RULE_paramList = 6;
StandardPascalParser.RULE_paramDecl = 7;
StandardPascalParser.RULE_compoundStmt = 8;
StandardPascalParser.RULE_statementList = 9;
StandardPascalParser.RULE_statement = 10;
StandardPascalParser.RULE_assignment = 11;
StandardPascalParser.RULE_procedureCall = 12;
StandardPascalParser.RULE_ifStmt = 13;
StandardPascalParser.RULE_writelnStmt = 14;
StandardPascalParser.RULE_writeArgList = 15;
StandardPascalParser.RULE_writeArg = 16;
StandardPascalParser.RULE_argList = 17;
StandardPascalParser.RULE_expr = 18;
StandardPascalParser.RULE_additiveExpr = 19;
StandardPascalParser.RULE_multiplicativeExpr = 20;
StandardPascalParser.RULE_unaryExpr = 21;
StandardPascalParser.RULE_primary = 22;

class ProgramContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = StandardPascalParser.RULE_program;
    }

	PROGRAM() {
	    return this.getToken(StandardPascalParser.PROGRAM, 0);
	};

	IDENT() {
	    return this.getToken(StandardPascalParser.IDENT, 0);
	};

	SEMICOLON() {
	    return this.getToken(StandardPascalParser.SEMICOLON, 0);
	};

	block() {
	    return this.getTypedRuleContext(BlockContext,0);
	};

	DOT() {
	    return this.getToken(StandardPascalParser.DOT, 0);
	};

	EOF() {
	    return this.getToken(StandardPascalParser.EOF, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof StandardPascalVisitor ) {
	        return visitor.visitProgram(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class BlockContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = StandardPascalParser.RULE_block;
    }

	compoundStmt() {
	    return this.getTypedRuleContext(CompoundStmtContext,0);
	};

	varSection() {
	    return this.getTypedRuleContext(VarSectionContext,0);
	};

	procedureDecl = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ProcedureDeclContext);
	    } else {
	        return this.getTypedRuleContext(ProcedureDeclContext,i);
	    }
	};

	accept(visitor) {
	    if ( visitor instanceof StandardPascalVisitor ) {
	        return visitor.visitBlock(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class VarSectionContext extends antlr4.ParserRuleContext {
